Exerciese on Class usage, ReLU, Softmax in Tensorflow

--- a/ClassUsage_tensorflow.ipynb
+++ b/ClassUsage_tensorflow.ipynb
@@ -147,6 +147,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6]\n",
+      " [ 5  7  9]\n",
+      " [ 8 10 12]\n",
+      " [11 13 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "t = np.array([[1,2,3], [4,5,6], [7,8,9], [10,11,12]])\n",
+    "u = np.array([1,2,3])\n",
+    "print(t+u)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
